# uoscore-uedhoc

./: .gitignore  CMakeLists.txt  main.c
cmake/: coverage.cmake  utils.cmake
fuzz-test/: .gitignore  CMakeLists.txt  README.md  fuzz.sh  fuzz_buf2coap.c  fuzz_msg1parse.c  fuzz_oscore2coap.c  main_entry.c
fuzz-test/input/fuzz_msg1parse/: 001
fuzz-test/input/fuzz_oscore2coap/: T1__OSCORE_REQ
modules/oscore/src/: fuzz.c  fuzz.sh
playground/: CMakeLists.txt  edhoc.c  main.c
